# voice-scheduling-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: index.py
data/credentials/: client_secret_1008575509756-0jv48c92ct9hqvs56hpj8s1t7rjs54nm.apps.googleusercontent.com.json
deploy/: Dockerfile  docker-compose.yml
docs/: assessment.md
source/: app.py  main.py
source/agent/: tool_handler.py
source/ai/: voice_scheduling.py
source/api/: routes.py
source/config/: settings.py
source/config/prompts/: system_prompt.yaml
source/controller/: health_controller.py  voice_controller.py  webhook_controller.py
source/core/: exceptions.py
source/models/: scheduling_models.py  webhook_models.py
source/services/: calendar_service.py  vapi_service.py
source/ui/: package-lock.json  package.json
source/ui/src/: App.tsx  index.css
source/utils/: logger.py
