[project]
name = "voice-scheduling-agent"
version = "0.1.0"
description = "A real-time voice scheduling agent"
authors = [
    { name = "Sahabista Arkitanego Armantara", email = "sahabista.armantara@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "google-api-python-client>=2.118.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.railway]
start = "uvicorn main:app --host 0.0.0.0 --port $PORT"

[project.scripts]
app = "source.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source"]
